--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,10 @@
 body {
   background-color: black;
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: black !important;
 
 }
 
@@ -22,6 +20,11 @@ textarea {
 a {
   text-decoration: none;
   color: white;
+}
+
+li > a {
+    text-decoration: none;
+    color: white;
 }
 
 ul,
