the navbar was corrected

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -16,6 +16,7 @@ body {
 }
 
 .section1 {
+    margin-top: -6rem;
     width: 40%;
 }
 
@@ -29,6 +30,10 @@ body {
 
 .section2 {
     width: 40%;
+    backdrop-filter: blur(10px);
+    background-color: rgba(37, 37, 37, 0.184);
+    padding: 6rem;
+    border-radius: 12;
 }
 
 .section2_rows {
@@ -38,7 +43,8 @@ body {
 }
 
 .inputs>div>input {
-    background-color: transparent;
+    backdrop-filter: blur(10px);
+    background-color: rgba(18, 18, 18, 0.049);
     color: rgb(121, 121, 121);
 }
 
@@ -55,3 +61,39 @@ body {
     color: rgb(121, 121, 121);
     
 }
+
+.video {
+    width: 12rem;
+}
+
+.button {
+    height: 3rem;
+    width: 8rem;
+    background-color: white;
+}
+
+.button:hover {
+   background-color: rgba(255, 255, 255, 0.328);
+   backdrop-filter: blur(10px);
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    top: 0px;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    position: fixed;
+    z-index: 2;
+    backdrop-filter: blur(5px);
+    background-color: rgba(7, 7, 7, 0.293) !important;
+  }
+  
+  .logo2 {
+    display: flex;
+    position: absolute;
+    top: 0.7rem;
+    left: 50%;
+    transform: translateX(-50%);
+  }
