--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,7 @@
-#body {
-    cursor: url('../public/cursor.png'), auto;
+.body {
+    /* cursor: url('../public/cursor.png'),
+    auto; */
+    cursor: crosshair;
 }
 .video_container {
     display: block;
@@ -108,15 +110,6 @@
     padding: 0.4rem 2.3rem 0.4rem;
     display: flex;
     text-align: left;
-}
-
-.logo {
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    width: 100%;
-    margin-top: 1rem;
-    z-index: 2;
 }
 
 .background {
