--- a/src/css/uber.css
+++ b/src/css/uber.css
@@ -1,6 +1,7 @@
 body {
   background-color: #000;
 }
+
 .video-container {
   top: 0;
   left: 0;
@@ -38,12 +39,10 @@ body {
   background: black;
 }
 
-
 .header {
   display: flex;
   align-items: center;
   width: 100%;
-  justify-content: space-between;
   top: 0px;
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -51,7 +50,14 @@ body {
   z-index: 2;
   backdrop-filter: blur(5px);
   background-color: rgba(7, 7, 7, 0.293) !important;
+}
 
+.logo2 {
+  display: flex;
+  position: absolute;
+  top: 0.7rem;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .section1 {
